--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "date-fns": "^3.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -20,7 +21,7 @@
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
-    "axios": "^1.6.8",
+    "axios": "^1.7.0",
     "bootstrap": "^5.3.3",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
@@ -28,7 +29,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "react-bootstrap": "^2.10.2",
-    "react-router-dom": "^6.23.0",
+    "react-router-dom": "^6.23.1",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
