--- a/frontend/requirements.txt
+++ b/frontend/requirements.txt
@@ -6,6 +6,7 @@ tailwindcss
 postcss 
 autoprefixer
 date-fns
+js-cookie
 
 
 /npm install axios react-router-dom react-bootstrap bootstrap -D tailwindcss postcss autoprefixer date-fns
