--- a/frontend/requirements.txt
+++ b/frontend/requirements.txt
@@ -6,7 +6,8 @@ tailwindcss
 postcss 
 autoprefixer
 date-fns
-
+js-cookie
+html-to-image
 
 /npm install axios react-router-dom react-bootstrap bootstrap -D tailwindcss postcss autoprefixer date-fns
 
